--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "hardhat": "^2.9.1"
   },
   "dependencies": {
+    "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/contracts": "^4.5.0",
-    "@openzeppelin/hardhat-upgrades": "^1.16.1"
+    "@openzeppelin/hardhat-upgrades": "^1.17.0"
   }
 }
