--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,10 @@
     "recoil": "^0.6.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.7",
     "eslint": "8.11.0",
-    "eslint-config-next": "12.1.0"
+    "eslint-config-next": "12.1.0",
+    "postcss": "^8.4.13",
+    "tailwindcss": "^3.0.24"
   }
 }
